--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,202 +1,207 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/swipe_refresh_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white">
+    android:layout_height="wrap_content">
 
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appbar"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/btn_gradient_yellow"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:elevation="0dp">
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
 
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/collapsing"
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:minHeight="20dp"
-            app:expandedTitleMarginEnd="48dp"
-            app:expandedTitleMarginStart="48dp"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            android:layout_height="wrap_content"
+            android:background="@drawable/btn_gradient_yellow"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:elevation="0dp">
+
+
+            <com.google.android.material.appbar.CollapsingToolbarLayout
+                android:id="@+id/collapsing"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:minHeight="20dp"
+                app:expandedTitleMarginEnd="48dp"
+                app:expandedTitleMarginStart="48dp"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <View
+                        android:id="@+id/status_bar1"
+                        android:layout_width="match_parent"
+                        android:layout_height="25dp" />
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="12dp"
+                        android:orientation="horizontal"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp">
+
+
+                        <RelativeLayout
+                            android:id="@+id/rl_unread"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:layout_centerVertical="true">
+
+                            <ImageView
+                                android:id="@+id/iv_msg"
+                                android:layout_width="20dp"
+                                android:layout_height="wrap_content"
+                                android:gravity="center"
+                                android:scaleType="centerInside"
+                                android:src="@drawable/icon_xiaoxi" />
+
+
+                            <ImageView
+                                android:id="@+id/iv_unread"
+                                android:layout_width="5dp"
+                                android:layout_height="5dp"
+                                android:layout_alignRight="@+id/iv_msg"
+                                android:background="@drawable/cycle"
+                                android:gravity="center" />
+                        </RelativeLayout>
+
+
+                        <TextView
+                            android:id="@+id/tv_dingwei"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentLeft="true"
+                            android:layout_centerVertical="true"
+                            android:layout_marginRight="100dp"
+                            android:drawableLeft="@drawable/icon_dingwe_bai"
+                            android:drawableRight="@drawable/icon_xiangxiaxuanze"
+                            android:drawablePadding="8dp"
+                            android:ellipsize="end"
+                            android:singleLine="true"
+                            android:text=""
+                            android:textColor="@color/white"
+                            android:textSize="16sp" />
+
+
+                    </RelativeLayout>
+
+                    <LinearLayout
+                        android:id="@+id/ll_tongzhi"
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginBottom="14dp"
+                        android:background="@drawable/bg_round100dp_white"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/icon_tongzhi" />
+
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginRight="10dp"
+                            android:layout_weight="1"
+                            android:text="当前地址超出配送范围，请重新定位"
+                            android:textColor="@color/color_FF6300"
+                            android:textSize="13sp" />
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/icon_guanbi" />
+
+                    </LinearLayout>
+                </LinearLayout>
+
+
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
 
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="60dp"
+                android:background="@drawable/bg_topround30dp_white"
+                android:gravity="center_vertical"
                 android:orientation="vertical">
 
-                <View
-                    android:id="@+id/status_bar1"
-                    android:layout_width="match_parent"
-                    android:layout_height="25dp" />
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="12dp"
-                    android:orientation="horizontal"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp">
-
-
-                    <RelativeLayout
-                        android:id="@+id/rl_unread"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true">
-
-                        <ImageView
-                            android:id="@+id/iv_msg"
-                            android:layout_width="20dp"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:scaleType="centerInside"
-                            android:src="@drawable/icon_xiaoxi" />
-
-
-                        <ImageView
-                            android:id="@+id/iv_unread"
-                            android:layout_width="5dp"
-                            android:layout_height="5dp"
-                            android:layout_alignRight="@+id/iv_msg"
-                            android:background="@drawable/cycle"
-                            android:gravity="center" />
-                    </RelativeLayout>
-
-
-                    <TextView
-                        android:id="@+id/tv_dingwei"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentLeft="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginRight="100dp"
-                        android:drawableLeft="@drawable/icon_dingwe_bai"
-                        android:drawableRight="@drawable/icon_xiangxiaxuanze"
-                        android:drawablePadding="8dp"
-                        android:ellipsize="end"
-                        android:singleLine="true"
-                        android:text=""
-                        android:textColor="@color/white"
-                        android:textSize="16sp" />
-
-
-                </RelativeLayout>
 
                 <LinearLayout
-                    android:id="@+id/ll_tongzhi"
+                    android:id="@+id/ll_search"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
-                    android:layout_marginBottom="14dp"
-                    android:background="@drawable/bg_round100dp_white"
+                    android:background="@drawable/bg_round100_grey"
                     android:gravity="center_vertical"
-                    android:orientation="horizontal"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp">
+                    android:orientation="horizontal">
 
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/icon_tongzhi" />
+                        android:layout_marginLeft="10dp"
+                        android:src="@drawable/icon_search_xiao" />
 
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
+                        android:layout_marginLeft="6dp"
+                        android:layout_marginRight="6dp"
                         android:layout_weight="1"
-                        android:text="当前地址超出配送范围，请重新定位"
-                        android:textColor="@color/color_FF6300"
-                        android:textSize="13sp" />
+                        android:text="午餐"
+                        android:textColor="@color/color_CBCBCB"
+                        android:textSize="14sp" />
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/icon_guanbi" />
+
+                    <TextView
+                        android:layout_width="55dp"
+                        android:layout_height="25dp"
+                        android:layout_marginRight="2.5dp"
+                        android:background="@drawable/btn_gradient_yellow_round"
+                        android:gravity="center"
+                        android:text="搜索"
+                        android:textColor="@color/white"
+                        android:textSize="14sp" />
 
                 </LinearLayout>
+
             </LinearLayout>
+        </com.google.android.material.appbar.AppBarLayout>
 
 
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
-
-
-        <LinearLayout
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:background="@drawable/bg_topround30dp_white"
-            android:gravity="center_vertical"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:background="@color/color_F5F5F5"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-
-            <LinearLayout
-                android:id="@+id/ll_search"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerview"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:background="@drawable/bg_round100_grey"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:paddingBottom="40dp" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:src="@drawable/icon_search_xiao" />
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="6dp"
-                    android:layout_marginRight="6dp"
-                    android:layout_weight="1"
-                    android:text="午餐"
-                    android:textColor="@color/color_CBCBCB"
-                    android:textSize="14sp" />
-
-
-                <TextView
-                    android:layout_width="55dp"
-                    android:layout_height="25dp"
-                    android:layout_marginRight="2.5dp"
-                    android:background="@drawable/btn_gradient_yellow_round"
-                    android:gravity="center"
-                    android:text="搜索"
-                    android:textColor="@color/white"
-                    android:textSize="14sp" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-    </com.google.android.material.appbar.AppBarLayout>
-
-
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/color_F5F5F5"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:paddingBottom="40dp" />
-
-    </androidx.core.widget.NestedScrollView>
-
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+        </androidx.core.widget.NestedScrollView>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
