--- a/app/src/main/res/layout/item_goods_section.xml
+++ b/app/src/main/res/layout/item_goods_section.xml
@@ -2,9 +2,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="5dp"
-    android:paddingRight="5dp"
-    android:paddingLeft="5dp"
     android:paddingBottom="17dp"
     android:background="@drawable/shadow">
 
@@ -17,20 +14,21 @@
 
     <ImageView
         android:id="@+id/iv_icon"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_alignParentRight="true"
         android:layout_marginTop="-18dp"
         android:layout_marginRight="12dp"
         android:layout_below="@+id/tv_image"
-        android:background="#000000"/>
+        android:padding="2.5dp"
+        android:background="@drawable/bg_white_round5"/>
 
     <TextView
         android:id="@+id/tv_money"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0.00"
-        android:textSize="12sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         android:layout_marginLeft="10dp"
         android:textColor="@color/color_FF5050"
@@ -89,16 +87,17 @@
         android:layout_below="@+id/tv_title"/>
 
     <TextView
-        android:id="@+id/tv_sells"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="月售3890"
-        android:textSize="12sp"
-        android:textStyle="bold"
-        android:layout_marginLeft="10dp"
-        android:textColor="@color/color_7C7877"
+        android:id="@+id/tv_status"
+        android:layout_width="90dp"
+        android:layout_height="35dp"
+        android:text="去抢购"
+        android:gravity="center"
+        android:textColor="@color/white"
         android:layout_alignParentRight="true"
+        android:layout_below="@id/tv_des"
+        android:layout_marginTop="-38dp"
         android:layout_marginRight="10dp"
-        android:layout_alignBottom="@+id/tv_des"
-        android:layout_marginTop="9dp"/>
+        android:textSize="17sp"
+        android:background="@drawable/btn_gradient_yellow_round"
+        />
 </RelativeLayout>
